--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "defaultConnection" : "Data source = Hookup.db"
-  }
+  },
+  "TokenKey" : "very secritive key you will never guess"
 }
