Register component fix

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "defaultConnection" : "Data source = Hookup.db"
   },
-  "TokenKey" : "very secritive key you will never guess"
+  "TokenKey" : "very secritive key you will never guess. I am quite sure about it. Come get at me if you doubt me fool"
 }
