--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.2.3",
+    "bootswatch": "^5.2.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
