--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
