--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings" : {
+    "CloudName": "dbbwaxlz8",
+    "ApiKey": "558179846561496",
+    "ApiSecret": "Mb6OeBxn-Tbtz7otatZH1ocf6Jc"
+
+  }
 }
