--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "bootswatch": "^5.2.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "ng2-file-upload": "^4.0.0",
     "ngx-bootstrap": "^10.2.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
