--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,5 +11,9 @@
     "ApiKey": "558179846561496",
     "ApiSecret": "Mb6OeBxn-Tbtz7otatZH1ocf6Jc"
 
-  }
+  },
+  "ConnectionStrings": {
+    "defaultConnection" : "Data source = Hookup.db"
+  },
+  "TokenKey" : "very secritive key you will never guess. I am quite sure about it. Come get at me if you doubt me fool"
 }
